# Simple_BLE_SB1

./: MANIFEST.in
simpleble_projects/: CMakeLists.txt
simpleble_projects/IndraApp_v1/: CMakeLists.txt  IndraApp_v1.cpp
simpleble_projects/Indra_BT_v1/: CMakeLists.txt  Indra_BT_v1.cpp
simpleble_projects/read/: read.cpp
simplebluez_projects/: CMakeLists.txt
simplebluez_projects/Indra_BT_App/: CMakeLists.txt  Indra_BT_App.cpp
simplebluez_projects/Indra_Connect/: CMakeLists.txt  Indra_Connect.cpp
